--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -31,7 +31,7 @@
   abbr={SIAM},
   bibtex_show={true},
   title={Qualitative indicator functions for imaging crack networks using acoustic waves},
-  author={Audibert, Lorenzo and Chesnel, Lucas and Haddar, Houssem and Napal, Kevish},
+  author={Napal, Kevish and Audibert, Lorenzo and Chesnel, Lucas and Haddar, Houssem},
   journal={SIAM Journal on Scientific Computing},
   volume={43},
   number={2},
@@ -56,7 +56,7 @@
   abbr={Springer},
   bibtex_show={true},
   title={Detecting sound hard cracks in isotropic inhomogeneities},
-  author={Audibert, Lorenzo and Chesnel, Lucas and Haddar, Houssem and Napal, Kevish},
+  author={Napal, Kevish and Audibert, Lorenzo and Chesnel, Lucas and Haddar, Houssem},
   booktitle={International Conference on Acoustics and Vibration},
   pages={61--73},
   year={2018},
