--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,7 @@
   year={2023},
   publisher={Royal Society},
   pdf={EffectiveTMatrix.pdf},
-  selected={true}
+  selected={false}
 }
 
 @article{pourahmadian2022poroelastic,
@@ -24,7 +24,7 @@
   year={2022},
   publisher={Elsevier},
   pdf={Poroelasticity.pdf},
-  selected={true}
+  selected={false}
 }
 
 @article{audibert2021qualitative,
