--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @article{napal2023,
   abbr={RS},
   bibtex_show={true},
-  title={Effective T-matrix of a cylinder filled with a random 2D particulate},
+  title={Effective T-matrix of a cylinder filled with a random 2D particulate (submitted)},
   author={Napal, Kevish and Piva, Paulo and Gower, Artur},
   journal={Proceedings A of the Royal Society},
   year={2023},
